# Security-baseline-auditor

./: HOW_TO_RUN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/baseline_auditor/: main.py  reporting.py  scoring.py
src/baseline_auditor/checks/: admins.py  defender.py  firewall.py  rdp.py  smb.py  system.py
