[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "baseline-auditor"
version = "0.1.0"
description = "Windows host baseline security auditor that outputs JSON and Markdown reports."
requires-python = ">=3.10"

[project.scripts]
baseline-auditor = "baseline_auditor.main:main"

